--- a/client/back-office/views/login.html
+++ b/client/back-office/views/login.html
@@ -65,55 +65,65 @@
                         src="../public/CasAnimaleBO.png"
                         alt="logo CasAnimale backoffice"
                       />
-                      <h1 class="text-xl font-semibold primary mt-8 mb-7 pb-1 uppercase">
-                        Login
-                      </h1>
+                      <header>
+                        <h1
+                          class="text-xl font-semibold primary mt-8 mb-7 pb-1 uppercase"
+                        >
+                          Login
+                        </h1>
+                      </header>
                     </div>
-                    <form>
-                      <p class="mb-4">Please login to your account with <label for="emailTab">email</label> and <label for="passwordTab">password</label></p>
-                      <div class="mb-4">
-                        <input
-                          type="text"
-                          class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
-                          id="emailTab"
-                          placeholder="Email"
-                        />
-                      </div>
-                      <div class="mb-4">
-                        <input
-                          type="password"
-                          class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
-                          id="passwordTab"
-                          placeholder="Password"
-                        />
-                      </div>
-                      <div class="text-center pt-1 mb-12 pb-1">
-                        <button
-                          id="loginButton"
-                          class="inline-block px-6 py-2.5 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg transition duration-150 ease-in-out w-full mb-3"
-                          type="button"
-                          data-mdb-ripple="true"
-                          data-mdb-ripple-color="light"
-                          style="
-                            background: linear-gradient(
-                              to right,
-                              #eba9b6,
-                              #e0b2bd,
-                              #c4a9b4,
-                              #c798a4
-                            );
-                          "
-                          onclick="login()"
-                        >
-                          Log in
-                        </button>
-                        <a
-                          class="text-gray-500"
-                          href="http://localhost:3000/f/restore"
-                          >Forgot password?</a
-                        >
-                      </div>
-                    </form>
+                    <main>
+                      <form>
+                        <p class="mb-4">
+                          Please login to your account with
+                          <label for="emailTab">email</label> and
+                          <label for="passwordTab">password</label>
+                        </p>
+                        <div class="mb-4">
+                          <input
+                            type="text"
+                            class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+                            id="emailTab"
+                            placeholder="Email"
+                          />
+                        </div>
+                        <div class="mb-4">
+                          <input
+                            type="password"
+                            class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+                            id="passwordTab"
+                            placeholder="Password"
+                          />
+                        </div>
+                        <div class="text-center pt-1 mb-12 pb-1">
+                          <button
+                            id="loginButton"
+                            class="inline-block px-6 py-2.5 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg transition duration-150 ease-in-out w-full mb-3"
+                            type="button"
+                            data-mdb-ripple="true"
+                            data-mdb-ripple-color="light"
+                            style="
+                              background: linear-gradient(
+                                to right,
+                                #eba9b6,
+                                #e0b2bd,
+                                #c4a9b4,
+                                #c798a4
+                              );
+                            "
+                            onclick="login()"
+                          >
+                            Log in
+                          </button>
+                          <a
+                            class="text-gray-500"
+                            href="http://localhost:3000/f/restore"
+                            >Forgot password?</a
+                          >
+                        </div>
+                      </form>
+                    </main>
                   </div>
                 </div>
                 <div
@@ -128,7 +138,7 @@
                     );
                   "
                 >
-                  <div class="text-white px-4 py-6 md:p-12 md:mx-6">
+                  <aside class="text-white px-4 py-6 md:p-12 md:mx-6">
                     <h2 class="text-xl font-semibold mb-6 primary">
                       We are more than just an animal business!
                     </h2>
@@ -140,7 +150,7 @@
                         >front office</a
                       >.
                     </p>
-                  </div>
+                  </aside>
                 </div>
               </div>
             </div>
